--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "-": "^0.0.1",
+    "axios": "^1.2.1",
     "jwt-decode": "^3.1.2",
     "material-ui-search-bar": "^1.0.0"
   }
