--- a/b-n-cafe/package.json
+++ b/b-n-cafe/package.json
@@ -15,6 +15,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "jwt-decode": "^3.1.2",
+    "axios": "^1.2.1",
+    "express": "^4.18.2",
     "material-react-table": "^1.3.16",
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -46,5 +49,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "Barnes-NobleCafe"
+  },
+  "author": "",
+  "license": "ISC"
 }
