--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "jwt-decode": "^3.1.2",
-    "material-ui-search-bar": "^1.0.0"
+    "material-ui-search-bar": "^1.0.0",
+    "react-router-dom": "^6.4.4"
   }
 }
