--- a/b-n-cafe/package.json
+++ b/b-n-cafe/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "material-react-table": "^1.3.16",
     "react": "^18.2.0",
