--- a/b-n-cafe/package.json
+++ b/b-n-cafe/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.10.2",
     "material-react-table": "^1.3.16",
     "react": "^18.2.0",
+    "react-auto-translate": "^0.0.6",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
