--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "-": "^0.0.1",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
+    "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "material-ui-search-bar": "^1.0.0",
     "react-router-dom": "^6.4.4"
