--- a/b-n-cafe/package.json
+++ b/b-n-cafe/package.json
@@ -18,6 +18,7 @@
     "iframe-react": "^1.0.1",
     "material-react-table": "^1.3.16",
     "react": "^18.2.0",
+    "react-auto-translate": "^0.0.6",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-router-dom": "^6.4.4",
