--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
@@ -9,7 +10,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build" : "node" 
+    "build": "node"
   },
   "name": "server",
   "version": "1.0.0",
